# LearnDirectX12

./: .gitignore  .gitmodules  LearnDirectX12.sln  README.md
LearnDirectX12/: AppControl.cpp  AppControl.h  BuildVsProject.bat  CMakeLists.txt  CommonDefine.h  D3DApp.cpp  D3DApp.h  D3Dx12.cpp  ExceptionBase.cpp  FrameResource.cpp  FrameResource.h  GameTimer.cpp  GameTimer.h  Graphics.cpp  Graphics.h  ITick.h  Keyboard.cpp  Keyboard.h  LearnDirectX12.vcxproj  LearnDirectX12.vcxproj.filters  MD3Dx12.h  MathHelper.cpp  Mouse.cpp  Mouse.h  Singleton.hpp  TestGraphics.cpp  TestGraphics.h  UploadBuffer.h  box.hlsl  cmake_all.bat  cmake_option.txt  d3dulti.cpp  d3dulti.h  main.cpp  window.cpp  window.h
LearnDirectX12/BasicTessellation/: BasicTessellation.cpp  BasicTessellation.h  CMakeLists.txt  Main.cpp
LearnDirectX12/BasicTessellation/shader/: Tessellation.hlsl
LearnDirectX12/BasicTessellationDemo/: BasicTessellation.cpp  BasicTessellation.h  CMakeLists.txt
LearnDirectX12/BasicTessellationDemo/shader/: Tessellation.hlsl
LearnDirectX12/BezierPatch/: BezierPatchApp.cpp  BezierPatchApp.h  CMakeLists.txt  Main.cpp
LearnDirectX12/BezierPatch/shader/: BezierPatch.hlsl
LearnDirectX12/BezierPatchDemo/: BezierPatchApp.cpp  BezierPatchApp.h  CMakeLists.txt
LearnDirectX12/BezierPatchDemo/shader/: BezierPatch.hlsl
LearnDirectX12/BoxApp/: BoxApp.cpp  BoxApp.h  CMakeLists.txt  TestGraphics.cpp  main.cpp
LearnDirectX12/BoxApp/shader/: Color.hlsl
LearnDirectX12/BoxDemo/: BoxApp.cpp  BoxApp.h  CMakeLists.txt  main.cpp
LearnDirectX12/CSMAndPCSSDemo/: CMakeLists.txt  Main.cpp  ShadowApp.cpp  ShadowMaterial.cpp  ShadowMaterial.h  ShadowRgph.cpp
LearnDirectX12/CSMAndPCSSDemo/shaders/: BlinnPhong.hlsl  Shadows.hlsl
LearnDirectX12/Component/: CMakeLists.txt  ComponentStd.h  ITick.h  cmake_option.txt
LearnDirectX12/Component/BaseApp/: BaseApp.cpp  BaseApp.h  BaseAppTest.cc  CMakeLists.txt  Graphics.h
LearnDirectX12/Component/D3D/: BlurFilter.cpp  BlurFilter.h  CMakeLists.txt  Camera.cpp  Camera.h  CubeRenderTarget.h  D3DDescHelper.h  D3DException.h  D3DShaderResource.cpp  D3DShaderResource.h  D3dDescHelper.cpp  DDSTextureLoader.cpp  DescriptorAllocator.cpp  DescriptorAllocator.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  FXAA.cpp  FXAA.h  FrameResource.cpp  FrameResource.h  IBL.cpp  IBL.h  Light.h  Material.h  Mesh.cpp  Mesh.h  RenderItem.cpp  RenderItem.h  RenderTarget.h  RootSignature.cpp  RootSignature.h  ShaderCommon.cpp  ShaderCommon.h  SkyBox.cpp  SkyBox.h  SobelFilter.cpp  SobelFilter.h  SphericalHarmonics.hpp  Texture.h  UploadBuffer.h  (+4 more)
LearnDirectX12/Component/Exception/: CMakeLists.txt  ExceptionBase.cpp  ExceptionBase.h  ExceptionTest.cc
LearnDirectX12/Component/GameTimer/: CMakeLists.txt  GameTimer.cpp  GameTimer.h  GameTimerTest.cc  test.cpp
LearnDirectX12/Component/Geometry/: Box.h  CMakeLists.txt  GeometryGenerator.cpp  GeometryGenerator.h  GeometryTest.cc  HalfEdgeMesh.cpp  HalfEdgeMesh.h  LoopSubdivision.cpp  LoopSubdivision.h  Simplify.cpp  Simplify.h
LearnDirectX12/Component/InputSystem/: CMakeLists.txt  InputSystem.cpp  InputSystem.h  InputSystemTest.cc  InputSystemTest.cpp  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  test.cpp  window.cpp  window.h
LearnDirectX12/Component/Math/: CMakeLists.txt  FloatStore.ini  MathHelper.cpp  MathHelper.h  MathStd.hpp  MathTest.cc  MatrixHelper.h  Scalar.hpp  Swizzle.hpp  Vector.hpp  VectorFunton.ini  VectorHelper.h  VectorHelper.ini  VectorMember.ini
LearnDirectX12/Component/RenderGraph/: CMakeLists.txt  RenderGraphStd.h
LearnDirectX12/Component/Script/: CMakeLists.txt
LearnDirectX12/Component/Singleton/: CMakeLists.txt  Singleton.hpp  SingletonTest.cc  test.cpp
LearnDirectX12/Component/VoxelTerrain/: CMakeLists.txt  SurfaceNet.cpp  SurfaceNet.h  VoxelTerrainTest.cc
LearnDirectX12/Component/dx12lib/: Adapter.h  CBufferVisitor.hpp  CMakeLists.txt  CommandContext.h  CommandList.cpp  CommandList.h  CommandListProxy.cpp  CommandListProxy.h  CommandQueue.cpp  CommandQueue.h  CommonContext.h  ConstantBuffer.cpp  ConstantBuffer.h  ContextProxy.hpp  DefaultBuffer.cpp  DefaultBuffer.h  DepthStencilBuffer.cpp  DepthStencilBuffer.h  DescriptorAllocation.cpp  DescriptorAllocation.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorAllocatorPage.cpp  DescriptorAllocatorPage.h  Device.cpp  Device.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  FRConstantBuffer.cpp  FRConstantBuffer.hpp  FRStructuredBuffer.cpp  FRStructuredBuffer.hpp  FrameResource.h  FrameResourceQueue.cpp  FrameResourceQueue.h  IResource.cpp  IResource.h  IndexBuffer.cpp  IndexBuffer.h  MakeObejctTool.hpp  (+39 more)
LearnDirectX12/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorLog.txt  Main.cpp  imgui.ini
LearnDirectX12/Editor/Component/: IComponent.h
LearnDirectX12/Editor/Editor/: Editor.cpp  Editor.h  EditorStd.h  IEditorItem.h
LearnDirectX12/Editor/EditorLog/: EditorLog.cpp  EditorLog.h
LearnDirectX12/Editor/ImGuiProxy/: ImGuiProxy.cpp  ImGuiProxy.h
LearnDirectX12/Instance/: CMakeLists.txt  InstanceApp.cpp  InstanceApp.h  Main.cpp
LearnDirectX12/InstanceDemo/: CMakeLists.txt  InstanceApp.cpp  InstanceApp.h
LearnDirectX12/LandAndWater/: CMakeLists.txt  LandAndWater.cpp  LandAndWater.h  LangAndWater.cpp  LangAndWater.h  main.cpp
LearnDirectX12/LandAndWaterDemo/: CMakeLists.txt  LandAndWater.cpp  LandAndWater.h  main.cpp
LearnDirectX12/Libraies/: CMakeLists.txt
LearnDirectX12/MirrorDemo/: CMakeLists.txt  MirrorApp.cpp  MirrorApp.h  main.cpp
LearnDirectX12/ShadowApp/: CMakeLists.txt  IRenderItem.h  Main.cpp  Model.cpp  Model.h  ShadowApp.cpp  ShadowApp.h
LearnDirectX12/ShadowDemo/: CMakeLists.txt  ShadowApp.cpp  ShadowApp.h  ShadowMaterial.cpp  ShadowMaterial.h  ShadowRgph.cpp  ShadowRgph.h
LearnDirectX12/Shape/: CMakeLists.txt  Shape.cpp  Shape.h  main.cpp
LearnDirectX12/ShapeDemo/: CMakeLists.txt  Shape.cpp  Shape.h
LearnDirectX12/TBDRDemo/: CMakeLists.txt  Main.cpp  TBDRApp.cpp  TBDRApp.h  TBDRRgph.cpp  TBDRRgph.h
LearnDirectX12/mirror/: CMakeLists.txt  MirrorApp.cpp  MirrorApp.h  main.cpp
(+299 files in other folders)
