cmake_minimum_required(VERSION 3.8)	
set(CMAKE_CXX_STANDARD 20)
project(Component)

macro(GetCMakeSubDir result rootDir)
	file(GLOB_RECURSE allItem LIST_DIRECTORIES true ${rootDir}/*)
	string(LENGTH ${rootDir}/ rootDirLength)
	foreach (dir ${allItem})
		if (IS_DIRECTORY ${dir} AND EXISTS ${dir}/CMakeLists.txt)
			string(SUBSTRING ${dir} ${rootDirLength} -1 subDir)
			LIST(APPEND allSubDir ${subDir})
		endif()
	endforeach()
	set(result ${allSubDir} PARENT_SCPOE)
endmacro()

GetCMakeSubDir(allSubDir, ${CMAKE_CURRENT_SOURCE_DIR})

set(PROJECT_COMPONENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(AllTestDir "")
foreach(dirname ${allSubDir}) 
	add_subdirectory(${dirname})
	LIST(APPEND AllTestDir "${dirname}")
endforeach()

if (ENABLE_TEST)
	enable_testing()
	set_property(GLOBAL PROPERTY USE_FOLDERS ON)
	foreach(dir ${AllTestDir})
		SET(absolutePath "${CMAKE_CURRENT_SOURCE_DIR}/${dir}")
		FILE(GLOB_RECURSE TEST_FILES  ${absolutePath}*Test.cc)
		if (TEST_FILES)
			add_executable("${dir}Test" ${TEST_FILES} ${HEADER_FILES} ${SOURCE_FILES})
			target_include_directories("${dir}Test" PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
			target_link_libraries("${dir}Test" PUBLIC ${dir})
			set_target_properties("${dir}Test" PROPERTIES FOLDER "AllTest")
		endif()
	endforeach()
	set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "AllTest")
endif()