cmake_minimum_required(VERSION 3.8)	
project(Component)
option(GROUP_BY_EXPLORER ON)


LIST(APPEND ComponentAllSubDir "BaseApp")
LIST(APPEND ComponentAllSubDir "D3D")
LIST(APPEND ComponentAllSubDir "Exception")
LIST(APPEND ComponentAllSubDir "GameTimer")
LIST(APPEND ComponentAllSubDir "InputSystem")
LIST(APPEND ComponentAllSubDir "Math")
LIST(APPEND ComponentAllSubDir "Singleton")
LIST(APPEND ComponentAllSubDir "Geometry")
LIST(APPEND ComponentAllSubDir "dx12lib")
LIST(APPEND ComponentAllSubDir "VoxelTerrain")
LIST(APPEND ComponentAllSubDir "Script")

if (MSVC)
	add_definitions(-D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)	## enable wstring_convert
endif(MSVC)

set(AllTestDir "")
foreach(dirname ${ComponentAllSubDir}) 
	if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${dirname}/CMakeLists.txt")
		add_subdirectory(${dirname})
		LIST(APPEND AllTestDir "${dirname}")
	endif()
endforeach()

if (ENABLE_TEST)
	enable_testing()
	set_property(GLOBAL PROPERTY USE_FOLDERS ON)
	foreach(dir ${AllTestDir})
		SET(absolutePath "${CMAKE_CURRENT_SOURCE_DIR}/${dir}")
		FILE(GLOB_RECURSE TEST_FILES  ${absolutePath}*Test.cc)
		if (TEST_FILES)
			add_executable("${dir}Test" ${TEST_FILES} ${HEADER_FILES} ${SOURCE_FILES})
			target_include_directories("${dir}Test" PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
			target_link_libraries("${dir}Test" PUBLIC ${AllTestDir})
			set_target_properties("${dir}Test" PROPERTIES FOLDER "AllTest")
		endif()
	endforeach()
endif()